# middleware/studentsValidator.js
@@ -1,0 +1,23 @@
+const validator = require('../helpers/validate');
+
+const saveStudent = (req, res, next) => {
+    const validationRule = {
+        firstName: 'required|string',
+        lastName: 'required|string',
+        major: 'required|string',
+        age: 'required|integer'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if(!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
+module.exports = {saveStudent};
